# SocialMedia

./: CMakeLists.txt  Readme.md
src/: AccountManager.cpp  Animations.cpp  App.cpp  Comment.cpp  Encrypter.cpp  Feed.cpp  Input.cpp  Post.cpp  Randomizer.cpp  ResourceManager.cpp  User.cpp  main.cpp
src/headers/: AccountManager.hpp  Animations.hpp  App.hpp  Comment.hpp  Encrypter.hpp  Feed.hpp  Input.hpp  Post.hpp  Randomizer.hpp  ResourceManager.hpp  User.hpp
src/resources/AnimationData/: login2.json  login3.json
